# redmon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  issue_activity_dialog_cd.uxf  issue_activity_sd.uxf  issues.txt  redmon.pro
resources/: redmon.icns
src/: config.cpp  config.h  main.cpp  src.pro
src/data/: activities_data_loader.cpp  activities_data_loader.h  data.cpp  data.h  data_loader.cpp  data_loader.h  issue.cpp  issue.h  time_entry.cpp  time_entry.h  time_entry_activity.cpp  time_entry_activity.h  time_entry_loader.cpp  time_entry_loader.h  utils.cpp  utils.h
src/dialogs/: issue_activity_dialog.cpp  issue_activity_dialog.h  time_commit_dialog.cpp  time_commit_dialog.h
src/models/: issue_list_item_delegate.cpp  issue_list_item_delegate.h  issue_table_item_delegate.cpp  issue_table_item_delegate.h  issues_model.cpp  issues_model.h  issues_table_model.cpp  issues_table_model.h  tasks_model.cpp  tasks_model.h  time_activities_model.cpp  time_activities_model.h
src/views/: active_issue_widget.cpp  active_issue_widget.h  issues_table_view.cpp  issues_table_view.h
src/windows/: graphics_window.cpp  graphics_window.h  main_window.cpp  main_window.h  main_window.ui  settings_window.cpp  settings_window.h
